--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <script>
-            window.location.replace("https://littlechest365-my.sharepoint.com/:f:/g/personal/little_littlew_top/EsNgr685WkZHhoc6iVz7NeYBkHOv3E383n3sQoqYclZRhg?e=0e5j1r");
+            window.location.replace("https://github.com/LittleChest/LivePack/releases/latest");
         </script>
     </body>
 </html>
